# paytonison

./: .gitattributes  .gitignore  10x.ts  AGENTS.md  Asari_Executive_Terms_Sheet.md  LICENSE  README copy.md  README.md  beowulf.py  butts.py  convoluted.py  fizz_bop.py  gremlin.py  hmm.py  its a me.py  its-a-me.py  oss.py  ouroboros_simulated_intimacy.tex  output.txt  post-scarcity.aux  post-scarcity.out  pyproject.toml  receipts.md  regard.py  run-transformers.fixed.ipynb  run-transformers.ipynb  stupid.py  trent.py  trent.ts  validate.py  virus.py  wut.py
.github/workflows/: mario-cpp.yml
asari/: total-work.tex
docs/: README.md
docs/agent-mode/: README.md
docs/agent-notes/: 2025-10-31-context-lag-mitigation.md
docs/asari/: grammar_of_being.tex
experiments/: README.md  busy_beaver.py  oss.py  tartarus.py  turing.txt  turing_demo.py
experiments/agents-system-prompt/: proto_AGENTS_v1.md  proto_AGENTS_v2.md
experiments/electra/: 1757217811430.conversation.json  Ouroboros_iteration_with_inline_footnotes.md  electra aeon prompt.md  electra test.md  electra.py
experiments/erebus/: Cargo.toml  README.md
experiments/gpt-oss/: README.md  moe_lab.py  pyproject.toml  who.py
experiments/grok/: grok-2.py
experiments/i-robot/: README.md  history.txt  master.py
experiments/mixis/: README.md  mixis.py
experiments/muse/: README.md  muse.py
experiments/prometheus/: README.txt  forms_quantum_llm.aux  forms_quantum_llm.bbl  forms_quantum_llm.blg  forms_quantum_llm.out  forms_quantum_llm.tex  ncd_matrix.csv  ncd_summary.csv  qq_results.csv  refs.bib
experiments/socratic-dialogue/: README.md  dialogue.txt
experiments/therapy-bot/: README.md  main.py  repo_description.txt
experiments/turing-demo/: README.md  turing_machine.py
experiments/tutor/: README.md  tutor_charlm.py  tutor_minimal.py
experiments/two-stooges-and-an-idiot/: README.md  duo-apply  duo.sh  prompts.md  scratchpad.json
jokes & gimmicks/: README_gremlin.md  beowulf.py  bofa.py  convoluted.py  gremlin.py  output.txt  package-lock.json  package.json  server.js  server.py
jokes & gimmicks/mario/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  (+1 more)
jokes-n-gimmicks/: README.md  beowulf.py  gremlin.py  gremlin_convo.txt  output.txt  virus.py
mario-clone/: .gitignore
mario-cpp/: CMakeLists.txt  PORT_NOTES.md  README.md
mario-cpp/app/: CMakeLists.txt
mario-cpp/app/src/: main.cpp  sdl_main.cpp
mario-cpp/assets/levels/: level1.txt
mario-cpp/core/: CMakeLists.txt
mario-cpp/core/include/mario/core/: config.hpp  constants.hpp  enemy.hpp  game_state.hpp  input.hpp  phase.hpp  physics.hpp  player.hpp  replay.hpp  types.hpp  world.hpp
mario-cpp/core/src/: enemy.cpp  game_state.cpp  player.cpp  replay.cpp  world.cpp
mario-cpp/tests/: CMakeLists.txt
mario-cpp/tests/replays/: golden_level1_v1.jsonl
mario-cpp/tests/src/: test_paths.hpp.in  test_replay.cpp  test_smoke.cpp  test_world.cpp
mario-python/: README.md
mario-rust/: Cargo.toml  README.md
ouroboros/: Ouroboros.docx
papers/: .gitignore  .nvimlog  README.md  quantum-ai.aux  quantum-ai.out  quantum-ai.tex  refs.bib
theory-of-everything/: README.md  form_projection_qecc.tex
trent/: llms 101.md
(+76 files in other folders)
